setup vite for github pages

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
     "cannon-es": "^0.20.0",
     "three": "^0.179.1"
   },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
+  },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^7.1.3"
   }
 }
